@@ -1,3 +1,8 @@
+2016-09-25  Martin Pärtel <martin dot partel at gmail dot com>
+
+	* Fix bug in readdir() introduced with 1.13.1. This fixes a bug when
+	  a bindfs mount is exported over NFS (issue #39).
+
 2016-07-31  Martin Pärtel <martin dot partel at gmail dot com>
 
 	* Added --enable-ioctl to address issue #37.
